# otgpd_repro

./: .gitignore  LICENSE  pixi.toml  readme.org
docs/: 00_freeform.org  01_hpc.org  03_suppl_viz.org  04_models.org  05_suppl_py.org
runs/: calc_rundata.py  init_condcheck.py  readme.org  run_pf.py
runs/automated/: Snakefile  readme.org  run_eon.py
runs/automated/profiles/any_cpu/: config.yaml
runs/automated/profiles/elja_generic/: config.yaml
runs/automated/scripts/: run_eon.sh
runs/manual/fixfail/: readme.org
runs/manual/fixfail/doublet/016/: config.ini  displacement.con  nwchem_socket.nwi  pos.con
runs/manual/fixfail/doublet/084/: config.ini  displacement.con  nwchem_doublet.nwi  nwchem_socket.nwi  pos.con
runs/manual/fixfail/doublet/100/: config.ini  displacement.con  nwchem_socket.nwi  pos.con
runs/manual/fixfail/singlet/242/: config.ini  displacement.con  nwchem_singlet.nwi  nwchem_socket.nwi  pos.con
runs/rundata/: data_otgp.csv  data_otgp_wbo1ang.csv
runs/rundata/cases/: d_110_data_GPDimer.csv  d_110_data_OTGPD.csv  d_136_data_GPDimer.csv  d_136_data_OTGPD.csv
runs/rundata/jctc/: data_gprd.csv  data_idimer_cgrot_lbfgs.csv
scripts/: build_nwchem.sh  env_setup.sh
subrepos/: readme.org
subrepos/IterativeRotationsAssignments/: .gitrepo
subrepos/chemparseplot/: .gitrepo
subrepos/eOn/: .gitrepo
subrepos/gpr_optim/: .clang-format  .gitignore  .gitlab-ci.yml  .gitrepo  CMakeLists.txt  LICENSE  Makefile  README.md  environment.yml  main.cpp  meson.build  meson_options.txt  pixi.toml  shell.nix  test_all_compilers.sh  tmp.con  towncrier.toml
subrepos/gpr_optim/.github/workflows/: c-cpp.yml  docbuilder.yml
subrepos/gpr_optim/apidocs/: Doxygen-prj.cfg
subrepos/gpr_optim/backend/: DistibutionFunctions.h  DistributionFunctions.cpp  Macros.h  MatrixProperties.cpp  MatrixProperties.h
subrepos/gpr_optim/data_types/: Coord.h  Field.h  Vector3_reg.h
subrepos/gpr_optim/docs/newsfragments/: +1f631a5d.rotrem.added.md  +24337c59.capnp_params.added.md  +db6c5764.emd.added.md
subrepos/gpr_optim/gpr/: AtomicDimer.cpp  AtomicDimer.h  AtomicDimer.inl  AtomicDimerInit.cpp  Enums.h
subrepos/gpr_optim/gpr/auxiliary/: AdditionalFunctionality.h  AdditionalFunctionality.inl  Distance.cpp  Distance.h  Gradient.cpp  Gradient.h  ProblemSetUp.cpp  ProblemSetUp.h  ProblemSetUp.inl
subrepos/gpr_optim/gpr/covariance_functions/: ConstantCF.cpp  ConstantCF.h  ConstantCF.inl  SexpatCF.cpp  SexpatCF.h  SexpatCF.inl
subrepos/gpr_optim/gpr/dimer/: Dimer.cpp  Dimer.h
subrepos/gpr_optim/gpr/eam_potential_fortran/: Makefile  tmp.con
subrepos/gpr_optim/gpr/ml/: ADAM.cpp  ADAM.h  ADAM.inl  Ceres.cpp  Ceres.h  Ceres.inl  GaussianProcessRegression.cpp  GaussianProcessRegression.h  GaussianProcessRegression.inl  ParamOpt.h  SCG.cpp  SCG.h  SCG.inl
subrepos/gpr_optim/gpr/observation_models/: LikGaussian.cpp  LikGaussian.h  LikGaussian.inl
subrepos/gpr_optim/gpr/optimization/: LBFGS.cpp  LBFGS.h
subrepos/gpr_optim/gpr/potentials/: EAMPotential.cpp  EAMPotential.h
subrepos/gpr_optim/gpr/prior/: PriorBase.h  PriorGaussian.cpp  PriorGaussian.h  PriorLogUnif.cpp  PriorLogUnif.h  PriorSqrtt.cpp  PriorSqrtt.h  PriorT.cpp  PriorT.h  PriorUnif.cpp  PriorUnif.h
subrepos/gpr_optim/managers/io/: CapnProtoManager.cpp  CapnProtoManager.h  ErrorManager.h  FileManager.cpp  FileManager.h  FileManager.inl  LogManager.h
subrepos/gpr_optim/nix/: sources.json
subrepos/gpr_optim/schema/: config.toml  gen_capnp_params.py  gprd_params.capnp  meson.build  readme.org
subrepos/gpr_optim/scripts/: gen_constraint_test.py  get_doc_requirements.sh
subrepos/gpr_optim/structures/: Structures.h
subrepos/gpr_optim/tests/: meson.build
subrepos/gpr_optim/tests/data_types/: FieldTest.cpp  FieldTest.h
subrepos/gpr_optim/tests/gpr/: AtomicDimerTest.cpp  AtomicDimerTest.h
subrepos/gpr_optim/tests/gpr/EONPotential/: Morse.h
subrepos/gpr_optim/tests/gpr/auxiliary/: DistanceTest.cpp  DistanceTest.h  GradientTest.cpp  GradientTest.h  ProblemSetUpTest.cpp  ProblemSetUpTest.h
subrepos/gpr_optim/tests/gpr/covariance_functions/: SexpatCFTest.cpp  SexpatCFTest.h
subrepos/gpr_optim/tests/gpr/dimer/: DimerRotRemTest.cpp  DimerTest.cpp  DimerTest.h
subrepos/gpr_optim/tests/gpr/ml/: ADAMTest.cpp  ADAMTest.h  GaussianProcessRegressionTest.cpp  GaussianProcessRegressionTest.h  SCGTest.cpp  SCGTest.h
subrepos/gpr_optim/tests/gpr/observation_models/: LikGaussianTest.cpp  LikGaussianTest.h
subrepos/gpr_optim/tests/gpr/potentials/: EAMPotentialTest.cpp  EAMPotentialTest.h
subrepos/gpr_optim/tests/gpr/prior/: PriorGaussianTest.cpp  PriorGaussianTest.h  PriorLogUnifTest.cpp  PriorLogUnifTest.h  PriorSqrttTest.cpp  PriorSqrttTest.h  PriorTTest.cpp  PriorTTest.h
subrepos/gpr_optim/tests/managers/io/: CapnpParamsTest.cpp  CapnpParamsTest.h  FileManagerTest.cpp  FileManagerTest.h
subrepos/gpr_optim/tests/reference/managers/io/: input_test.txt
subrepos/rgpycrumbs/: .gitrepo  .taplo.toml  pixi.toml  readme_src.org
subrepos/rgpycrumbs/docs/newsfragments/: +5f7b05e9.con_splitter.added.md  +71703979.prefix_deleter.added.md  +7ee790bf.eon_ovito.added.md
subrepos/rgpycrumbs/rgpycrumbs/eon/: plt_neb.py  ptmdisp.py
